Add background to help. Update method of reading txt-file

--- a/4_sem/Lab_3/version_ElasticNodes/help/about_graph.htm
+++ b/4_sem/Lab_3/version_ElasticNodes/help/about_graph.htm
@@ -7,7 +7,7 @@
   </head>
   
   
-  <body><center><table border=0 id='wrapper'>
+  <body style='background: #691A0E;'><center><table border=0 id='wrapper'>
     <tr><td colspan=2 id='headtd'>
       Лабораторная работа <span id='headdm'>№3</span>
     </td></tr>
@@ -32,7 +32,7 @@
 <tr><td width='100%' valign='top'>
 
 <h1 style='padding-bottom: 14px'><center>Работа с графом</center></h1>
-<big><big><big><big><h2>
+<big><big><big><big><h3>
 <pre>
 Для создания графа необходимо сгенерировать матрицу смежности или 
 ввести ее вручную в поле с подсказкой "Введите матрицу здесь".
@@ -104,7 +104,7 @@
    3 -> 2 -> 6 ->  7
    Расстояние: 16"
   </pre>
-  </h2></big></big></big></big>
+  </h3></big></big></big></big>
   </td>
   </tr>
   
