--- a/4_sem/Lab_3/version_ElasticNodes/help/help.htm
+++ b/4_sem/Lab_3/version_ElasticNodes/help/help.htm
@@ -7,7 +7,7 @@
   </head>
   
   
-  <body><center><table border=0 id='wrapper'>
+  <body style='background: #691A0E;'><center><table border=0 id='wrapper'>
     <tr><td colspan=2 id='headtd'>
       Лабораторная работа <span id='headdm'>№3</span>
     </td></tr>
@@ -33,25 +33,36 @@
 
 <h1 style='padding-bottom: 14px'><center>Алгоритм работы</center></h1>
 <big><big><big><big><h3>
-<p>&emsp;Для произвольных s, t принадлежащих V (s &ne; t) существует вершина v, такая что</p>
-<center>d(s,t) = d(s,v) + a(v,t).</center>
-<p>&emsp;Действительно, таким свойством обладает предпоследняя вершина произвольного кратчайшего пути из s в t. Далее мы можем найти вершину u, для которой:</p>
+<pre>&emsp;Для произвольных s, t принадлежащих V (s &ne; t) существует
+вершина v, такая что: </pre><p></p>
+<center>d(s,t) = d(s,v) + a(v,t).</center><pre>
+&emsp;Действительно, таким свойством обладает предпоследняя вершина
+произвольного кратчайшего пути из s в t. Далее мы можем найти
+вершину u, для которой:</pre><p></p>
 <center>d(s, v) = d(s, u) + a(u, v)</center>
-<p>Из положительности длины всех контуров легко следует, что созданная таким образом последовательность t, u, v, . . . не содержит повторений и оканчивается вершиной s. Очевидно, что она определяет (при обращении очередности) кратчайший путь из s в t. Таким образом, мы получаем следующий алгоритм:</p>
-<p></p>
-<p></p>
-<p></p>
+<pre>
+&emsp;Из положительности длины всех контуров легко следует, что
+созданная таким образом последовательность t, u, v, . . . не
+содержит повторений и оканчивается вершиной s. Очевидно, что
+она определяет (при обращении очередности) кратчайший путь из
+s в t. Таким образом, мы получаем следующий алгоритм:
+
+</pre>
 <h1><center>Алгоритм "Нахождение кратчайшего пути".</center></h1>
 <p></p>
 
-<p>&emsp;Данные: </p>
-<p>&emsp;1. Расстояния D[v] от фиксированной вершины s до всех остальных вершин v принадлежащих V</p>
-<p>&emsp;2. Фиксированная вершина t </p>
-<p>&emsp;3. Матрица весов ребер A[u, v], u, v принадлежат V.</p>
+<pre>
+
+&emsp;Данные:
+&emsp;1. Расстояния D[v] от фиксированной вершины s до всех
+&emsp;остальных вершин v принадлежащих V
+&emsp;2. Фиксированная вершина t
+&emsp;3. Матрица весов ребер A[u, v], u, v принадлежат V.
   
-<p></p>
-<p>&emsp;Результаты:</p>
-<p>&emsp;1. СТЕК содержит последовательность вершин, определяющую кратчайший путь из s в t. <p><i>
+&emsp;Результаты:
+&emsp;1. СТЕК содержит последовательность вершин, определяющую
+&emsp;кратчайший путь из s в t.
+</pre><i>
 <pre>1 begin
 2 СТЕК := &empty;; СТЕК &lArr; t; v := t;
 3 while v = s do
@@ -62,8 +73,31 @@
 8 end
 9 end
 </pre></i>
-<p> Пусть V,E &mdash; ориентированный граф, |V| = n, |E| = m. Если выбор вершины u в строке 5 происходит в результате просмотра всех вершин, то сложность нашего алгоритма &mdash; O(n2). Если мы просматриваем только список ПРЕДШ[v], содержащий все вершины u, такие что u &rarr; v, то в этом случае сложность будет O(m). Отметим, что в случае положительных весов ребер задача о кратчайшем пу- ти в неориентированном графе легко сводится к аналогичной задаче для некоторого ориентированного графа. С этой целью достаточно заменить каждое ребро {u, v} двумя дугами u, v и v, u, каждая с таким же весом, что и {u, v}. <p></p>
-Однако в случае неположительных весов это приводит к возникновению контуров с неположительной длиной. В данной главе мы всегда будем предполагать, что G = V,E является ориентированным графом, n = |V|, m = |E|. В целях упрощения изложения и избежания вырожденных случаев при оценке сложности алгоритмов будем принимать m = Ω(n) (т.е. n = O(m)). Это исключает ситуа- ции, при которых &laquo;большинство&raquo; вершин изолированные. Будем предполагать также, что веса дуг запоминаются в массиве A[u, v], u, v &isin; V (A[u, v] содержит вес a(u, v))<p> (В. Липский. Комбинаторика для программиста. М. &laquo;Мир&raquo;, 1988).</p></p>
+<pre> Пусть V,E &mdash; ориентированный граф, |V| = n, |E| = m.
+Если выбор вершины u в строке 5 происходит в результате просмотра
+всех вершин, то сложность нашего алгоритма &mdash; O(n2).
+Если мы просматриваем только список ПРЕДШ[v], содержащий все
+вершины u, такие что u &rarr; v, то в этом случае сложность
+будет O(m). Отметим, что в случае положительных весов ребер
+задача о кратчайшем пу- ти в неориентированном графе легко
+сводится к аналогичной задаче для некоторого ориентированного
+графа. С этой целью достаточно заменить каждое ребро {u, v}
+двумя дугами u, v и v, u, каждая с таким же весом, что и {u, v}.
+
+
+Однако в случае неположительных весов это приводит к возникновению
+контуров с неположительной длиной. В данной главе мы всегда будем
+предполагать, что G = V,E является ориентированным графом, n = |V|,
+m = |E|. В целях упрощения изложения и избежания вырожденных случаев
+при оценке сложности алгоритмов будем принимать m = Ω(n)
+(т.е. n = O(m)). Это исключает ситуации, при которых
+&laquo;большинство&raquo; вершин изолированные. Будем предполагать
+также, что веса дуг запоминаются в массиве
+A[u, v], u, v &isin; V (A[u, v] содержит вес a(u, v))
+
+
+
+(В. Липский. Комбинаторика для программиста. М. &laquo;Мир&raquo;, 1988).</pre>
 
   </h3></big></big></big></big>
   </td>
