--- a/4_sem/Lab_3/version_ElasticNodes/help/1.htm
+++ b/4_sem/Lab_3/version_ElasticNodes/help/1.htm
@@ -7,7 +7,7 @@
   </head>
   
   
-  <body>
+  <body style='background: #691A0E;'>
   <center><table border=0 id='wrapper'>
     <tr><td colspan=2 id='headtd'>
       Лабораторная работа <span id='headdm'>№3</span>
@@ -18,7 +18,7 @@
   <table border=0 cellpadding=1 id='restable'>
     <tr id='reshead'>
       <th><span style='font-size: 13px'><b class='canBeLong'>Навигационная панель</b><br/>
-	</span></th>
+        </span></th>
     </tr>
 	 <tr class='odd'><td><span class='navitem'><a href='1.htm' class='current'>Главная страница</a></span></td>
 	 <tr class='odd'><td><span class='navitem'><a href='help.htm'>Алгоритм программы</a></span></td></tr>
