--- a/4_sem/Lab_3/version_ElasticNodes/help/about_graph.htm
+++ b/4_sem/Lab_3/version_ElasticNodes/help/about_graph.htm
@@ -1,119 +1,1 @@
-﻿<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset='utf-8' />
-    <meta http-equiv='Content-Type' content='text/html; charset=utf-8' />
-      <link rel='stylesheet' href="style.css" type='text/css' />
-  </head>
-  
-  
-  <body style='background: #691A0E;'><center><table border=0 id='wrapper'>
-    <tr><td colspan=2 id='headtd'>
-      Лабораторная работа <span id='headdm'>№3</span>
-    </td></tr>
-	
-<tr><td id='navtd'>	
-<table border=0 width='20%'>
-  <table border=0 cellpadding=1 id='restable'>
-    <tr id='reshead'>
-      <th><span style='font-size: 13px'><b class='canBeLong'>Навигационная панель</b><br/>
-	</span></th>
-    </tr>
-	 <tr class='odd'><td><span class='navitem'><a href='1.htm'>Главная страница</a></span></td>
-	 <tr class='odd'><td><span class='navitem'><a href='help.htm'>Алгоритм программы</a></span></td></tr>
-	 <tr class='odd'><td><span class='navitem'><a href='about_graph.htm' class='current'>Работа с графом</a></span></td>
-	 
-	 </table>
-  </td>
-   </td><td id='bodytd'>	
-   
-
-<table border=0 width='100%'>
-<tr><td width='100%' valign='top'>
-
-<h1 style='padding-bottom: 14px'><center>Работа с графом</center></h1>
-<big><big><big><big><h3>
-<pre>
-Для создания графа необходимо сгенерировать матрицу смежности или 
-ввести ее вручную в поле с подсказкой "Введите матрицу здесь".
-
-Пример матрицы:
-[ 1 0 1 1 0 1 1 ]
-[ 0 0 1 1 0 0 1 ]
-[ 1 1 1 0 0 1 0 ]
-[ 1 1 0 1 0 1 1 ]
-[ 0 0 0 0 0 1 1 ]
-[ 1 0 1 1 1 1 1 ]
-[ 1 1 0 1 1 1 1 ]
-
-  Если на месте a[i][j] элемента матрицы стоит 1, значит
-существует путь от вершины i до вершины j.
-
-  Для отрисовки графа необходимо нажать кнопку "Создать граф".
-
- Возможности программы:
-
-  1) Изменение имен вершин. Для изменение имени вершины 
-  необходимо в поле, имеющем следующую структуру:
-      1: 1
-      2: 2
-      3: 3
-      4: 4
-      5: 5
-      ....
-   заменить число, стоящее после двоеточия на желаемую строку
-
-   Пример: Замена 3 на "Три" будет выглядеть так:
-      1: 1
-      2: 2
-      3: Три
-      4: 4
-      5: 5
-      ....
-   
-   После изменения необходимо нажать кнопку "Создать граф".
-
-   2) Изменение цвета вершин соответствующей кнопкой главного 
-   окна на любой произвольный цвет палитры.
-   
-   3) Подвижность вершин. Для переноса вершины нажмите ЛКМ и 
-   перенесите в желаемое место сцены.
-   
-   4) Создание ребра. Дважды кликните на вершину, от которой будет
-   идти ребро (Source Node), потом дважды кликните на вершину к 
-   которой будет идти ребро (Destination Node). Затем нажмите 
-   кнопку "Соединить вершины". В соседнем поле будут выведены
-   выбранные вершины, присутствует возможность ручного выбора
-   соединяемых вершин.
-   
-   5) Удаление ребра. (Аналогично созданию)
-   
-   6) Соединение и удаление всех ребер.
-   
-   7) Поиск расстояния между 2 вершинами.
-   Создайте граф, в двух выпадающих списках в выберите 
-   произвольные вершины (левая - Source Node, правая - Destination Node).
-   Нажмите кнопку "Найти расстояние расстояние между двумя фиксированными точкам". 
-   В результате работы алгоритма программа выведет граф с выделенным путем.
-   </pre><p></p>
-  <center><img src="examle_finded_way.png" id="lower"></center><p></p>
- <center>Рисунок 2 - Пример графа, с найденным путем</center><br><br>
- <pre>Для данного случая программа выведет:
-   
-   "Порядок посещения вершин:
-   3 -> 2 -> 6 ->  7
-   Расстояние: 16"
-  </pre>
-  </h3></big></big></big></big>
-  </td>
-  </tr>
-  
-</table>
-    </td></tr>
-    <tr><tr><tr><tr><td colspan="2" id="foottd"><center><img src="spbctf.png" id="lower">  Coded by kovinevmv, 2018</center></td></tr></tr></tr></tr>
-    </tr>
-  </table></center>
-   
-  </body>
-</html>
-
+﻿//beta
