--- a/4_sem/Lab_4/ver_3.0_Final/help/1.htm
+++ b/4_sem/Lab_4/ver_3.0_Final/help/1.htm
@@ -10,7 +10,7 @@
   <body style='background: #691A0E;'>
   <center><table border=0 id='wrapper'>
     <tr><td colspan=2 id='headtd'>
-      Лабораторная работа <span id='headdm'>№4</span>
+      Программа расчёта максимального потока в сети с использованием анимации
     </td></tr>
 	
 <tr><td id='navtd'>	
@@ -39,7 +39,7 @@
 <h1 style='padding-bottom: 14px'><center>Справка</center></h1>
 <h3>
 <p>
-  Данная программа предназначена для рисования графов, вида представленного на рисунке 1. А также при помощи <a href='help.htm'>алгоритма</a> находит максимальный поток в сети: <p></p>
+  Программа расчёта максимального потока в сети с использованием анимации. При помощи следующего <a href='help.htm'>алгоритма</a> данная программа находит максимальный поток в сети. Пример графа с найденным потоком: <p></p>
   <center><img src="example.png" id="lower"></center><p></p>
  <center>Рисунок 1 - Пример графа</center><br><br></br></br>
   </p></h3>
