--- a/4_sem/Lab_4/ver_3.0_Final/help/help.htm
+++ b/4_sem/Lab_4/ver_3.0_Final/help/help.htm
@@ -39,40 +39,41 @@
 <h1 style='padding-bottom: 14px'><center>Алгоритм работы</center></h1>
 <big><big><big><big><h3>
 
-<p>Под сетью мы будем пониматьпару S = (G, c), где G = (V,E) — произвольный
+<p>Под сетью мы будем понимать пару S = (G, c), где G = (V,E) — произвольный
 ориентированный граф, а c : E → R — функция, которая каждой дуге (v, u)
 ставит в соответствие неотрицательное вещественное число c(u, v), называемое
 пропускной способностью этой дуги. Множества V и E называются
 соответственно множеством вершин и множеством дуг сети S</p>
 
-<p>Алгоритм</p>
+<h1 style='padding-bottom: 14px'><center>Алгоритм нахождения максимального потока</center></h1>
 
-<pre>Построение максимального потока в сети.
-Данные: Сеть, представленная списками инцидентности ПРЕДШ[v], ЗАПИСЬ[v],
-v ∈ V , пропускные способности c[u, v], u, v ∈ V .
-Результаты: Максимальный поток F[u, v], u, v ∈ V .
-1. begin
-2. for u ∈ V do
-3. for v ∈ V do F[u, v] := 0; (*нулевой начальный поток*)
-4. repeat PSA; (*построение вспомогательной бесконтурной сети*)
-5. if ДЛИНА[t] = ∞ then (*поток F не является максимальным*)
-6. begin MAXP SA;
-(*построение максимального потока во вспомогательной сети*)
-(*перенести поток из вспомогательной сети в главную*)
-7. for u ∈ XV do(*XV =множество вершин вспомогательной сети*)
-8. for v ∈ XV do
-9. begin F[u, v] := F[u, v] + XF[u, v];
-10. if F[u, v] > C[u, v] then
-11. begin F[v, u] := F[v, u] − (F[u, v] − C[u, v]);
-12. F[u, v] := C[u, v]
-13. end
-14. end
-15. end (*конец фазы*)
-16. until ДЛИНА[t] = ∞ (*поток F — максимальный*)
-17. end</pre>
+<p>Обозначим количество вершин в графе как переменную size.
+Объявим 2 двумерных массива размера size x size для хранения пропускной способности и потока для заданных вершин (capacity и flow).</p>
+<p>Например, если через вершины 1 и 2 есть поток равный 3, а пропускная способность - 4, тогда организация хранения данной
+информации в массивах будет выглядеть следующим образом: flow[1][2] = 3, capacity[1][2] = 4. До запуска алгоритма массив
+flow инициализирован нулями.</p>
+<p>Для нахождения путей между двумя заданными точками реализуем функцию bfs.</p>
+
+<p>Зададим сток (stock) и исток (source).
+Пока существуют пути между stock и source найденные через bfs, выполняем алгоритм нахождения максимального потока.
+Для этого заведем переменную delta, отвечающую за изменение потока. Функция bfs возвращает одномерный массив pred
+(найденный путь). Пройдемся по заданному пути и найдем минимальное значение delta, определенное следующим образом:
+delta = min(delta, разность между пропускной способностью и потоком для каждого ребра найденного пути). После этого
+увеличим значение потока на величину delta для каждого ребра пути.</p>
+
+<h1 style='padding-bottom: 14px'><center>Алгоритм поиска в ширину</center></h1>
+
+<p>bfs - алгоритм поиска в ширинуоснован на алгоритме из книги Липского (*).</p>
+
+<p>Дополнительным условием является проверки вершины на корректность существования потока (пропускная способность всегда должна быть больше потока).
+Функция bfs возвращается true или false в зависимости от существования пути между заданными вершинами. Также функция
+модифицирует одномерный массив pred в котором записывается путь в определенном виде. </p>Рассмотрим пример №2, первый обход
+функции bfs. Результат: pred = [-1,0,0,1,2,3]. Интерпретация полученного массива в путь выглядит следующим образом
+(нумерация с 0): Начинаем с конца, последняя вершина 5. pred[5] = 3 => вторая вершина 3. pred[3] = 1, pred[1] = 0, pred[0] = -1 - конец. Получаем путь 5-3-1-0.
+
 
 <p></p><p></p><p></p>
-<p>&nbsp;&nbsp;(В. Липский. Комбинаторика для программиста. М. &laquo;Мир&raquo;, 1988).</p>
+<p>&nbsp;&nbsp;(*) - В. Липский. Комбинаторика для программиста. М. &laquo;Мир&raquo;, 1988.</p>
 
   </h3></big></big></big></big>
   </td>
